Working on documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifiers =
     Programming Language :: Python :: 3
 license = GNU GPLv3
 description = Memory-efficient, dense, random projection of sparse vectors
+long_description = file: README.rst, LICENSE
 keywords = numba, random projection, term-frequency, tfidf, dimension reduction
 
 [options]
