Bug fix on setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,13 @@ include_package_data = True
 packages = find:
 python_requires = >=3.8
 install_requires =
-    numba >= 0.54.1
-    psutil
+    numba >= 0.55.2
+    pybloomfilter >= 0.5.5
+    scikit-learn >= 1.1.1
+    scipy >= 1.7.3
+    sketchnu >= 1.2.0
 
 [options.packages.find]
 exclude =
     docs*
-    pocket_dimension.tests
+    tests
