Still trying to make gcc available for the github action
This one trys using a "run" command in the step to install sudo apt-get install gcc

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Adds GCC so that pybloomfiltermmap3 can build
-      - uses: egor-tensin/setup-gcc@v1
-        with:
-          version: latest
-          platform: x64
+      - name: install_gcc
+        run: |
+          sudo apt-get install gcc
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
