Added --allow-releaseinfo-change to the update command
The --fix-missing flag did not find the missing files.

https://stackoverflow.com/questions/68802802/repository-http-security-debian-org-debian-security-buster-updates-inrelease

So following this SO solution to add the --allow-releaseinfo-change

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: ammaraskar/sphinx-action@master
         with:
           docs-folder: "docs/"
-          pre-build-command: "apt-get install -y --fix-missing gcc"
+          pre-build-command: "apt-get -y --allow-releaseinfo-change update && apt-get install -y gcc"
 
       # Publish built docs to gh-pages branch
       - name: Commit documentation changes
