Making setup.cfg the exact same as sketchnu
Having problems make grayskull make the recipe

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,6 @@ classifiers =
     Programming Language :: Python :: 3
 license = GNU GPLv3
 description = Memory-efficient, dense, random projection of sparse vectors
-long_description = file: README.rst, LICENSE
 keywords = numba, random projection, term-frequency, tfidf, dimension reduction
 
 [options]
@@ -28,4 +27,4 @@ install_requires =
 [options.packages.find]
 exclude =
     docs*
-    tests
+    pocket_dimension.tests
