Pretty sure I had the wrong bloomfilter package
I wanted to use the pybloomfiltermmap3

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifiers =
     Programming Language :: Python :: 3
 license = GNU GPLv3
 description = Memory-efficient, dense, random projection of sparse vectors
+long_description = file: README.rst
 keywords = numba, random projection, term-frequency, tfidf, dimension reduction
 
 [options]
@@ -19,7 +20,7 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     numba >= 0.55.2
-    pybloomfilter >= 0.5.5
+    pybloomfiltermmap3 >= 0.5.5
     scikit-learn >= 1.1.1
     scipy >= 1.7.3
     sketchnu >= 1.2.0
