--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
-[build-system]
-requires = ["setuptools>=39.2.0"]
-build-backend = "setuptools.build_meta"
+[project]
+name = "pocket_dimension"
+version = "0.2.0"
+description = "Memory-efficient, dense, random projection of sparse vectors."
+readme = "README.rst"
+authors = [{name = "Matthew Hendrey", email = "matthew.hendrey@gmail.com"}]
+license = "GNU GPLv3"
+license-files = ["LICENSE"]
+keywords = ["numba", "random projection", "term-frequency", "tfidf", "dimension reduction"]
+requires-python = ">=3.11"
+dependencies = [
+    "numba>=0.55.2",
+    "pybloomfiltermmap3>=0.5.5",
+    "scikit-learn>=1.6",
+    "sketchnu>=1.2",
+]
+
+[project.urls]
+Documentation = "https://mhendrey.github.io/pocket_dimension"
+Source = "https://github.com/mhendrey/pocket_dimension"
+
+[dependency-groups]
+dev = [
+    "black>=25.12.0",
+    "ipython>=9.8.0",
+    "pytest>=9.0.2",
+]
