--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 description = "Memory-efficient, dense, random projection of sparse vectors."
 readme = "README.rst"
 authors = [{name = "Matthew Hendrey", email = "matthew.hendrey@gmail.com"}]
-license = "GPL-3.0-only"
+license = {file = "LICENSE"}
 keywords = ["numba", "random projection", "term-frequency", "tfidf", "dimension reduction"]
 requires-python = ">=3.11"
 dependencies = [
