--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      # Upgrade pip to a recent version
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
       # Standard drop-in approach that should work for most people.
       - uses: ammaraskar/sphinx-action@master
         with:
