--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Upgrade pip to a recent version
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
-      # Standard drop-in approach that should work for most people.
-      - uses: ammaraskar/sphinx-action@master
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          docs-folder: "docs/"
-          pre-build-command: "apt-get -y --allow-releaseinfo-change update && apt-get install -y gcc"
+          python-version: '3.11'
+      
+      - name: Install dependecencies
+        run: |
+          pip install --upgrade pip
+          pip install -r docs/requirements.txt
+      
+      - name: Build documentation
+        run: |
+          cd docs
+          make html
 
       # Publish built docs to gh-pages branch
       - name: Commit documentation changes
